// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.ui.test;

option java_package = "androidx.test.espresso.proto";

import "google/protobuf/any.proto";

message TestProto {
  string hello = 1;
}

message GenericTestProto {
  string id = 1;
  bytes someValue = 2;
  bytes anotherValue = 3;
  google.protobuf.Any someAnyValue = 4;
  google.protobuf.Any anotherAnyValue = 5;
  repeated google.protobuf.Any someAnyList = 6;
  repeated google.protobuf.Any anotherAnyList = 7;
}

message MultipleFieldClassTestProto {
  string id = 1;
  bytes aByte = 2;
  bytes anInt = 3;
  bytes aLong = 4;
  bytes aString = 5;
  google.protobuf.Any anyRegisteredType = 6;
  repeated google.protobuf.Any anyTypeIterable = 7;
}

message NoArgClassTestProto {
  string id = 1;
}

message RemoteMsgFieldAnnotatedFieldsClassProto {
  string id = 1;
  bytes aString = 2;
  google.protobuf.Any anyRegisteredType = 3;
  repeated google.protobuf.Any anyTypeIterable = 4;
}

message StubRootMatcherProto {
  string id = 1;
}

message ParcelableFieldClassProto {
  string id = 1;
  bytes uri = 2;
}

message TestAtomProto {
  string id = 1;
}
